--- a/writeup.html
+++ b/writeup.html
@@ -104,6 +104,8 @@ Ultimately, we discovered that slicing occured as we approach the interior of th
 
 <p><hr><p><a name='Results'></a><h1>Results</h1><p><hr><p>
 We measured success qualitatively based on the resolution of our rendering, the speed of the animation, and the extent to which the visualizer seemed representative of the music. We tested our final project on computers with 8, 16, and 32GB of RAM and observed the expected trend that increasing RAM allowed for higher resolution, faster animations. Overall, our results indicate that we would need to further optimize our distance estimation functions in order to better accomodate users with less RAM.
+<p>
+Below, we go through each of the animated scenes briefly. Each header links to the batch url for the given scene. Check out our <a href='tutorial.html'>brief tutorial</a> to learn how to navigate and interact with the visualizations.
 
 <ul>
 <li><h3>Infinite Spheres</h3></li>
