--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h2>Rachel Margulies &lt;rachelbm&gt;<br>
             Sonia Skoularikis &lt;sskoular&gt;<br>
             Thomas Greenspan &lt;tgreensp&gt;</h2>
+        <h2><a href='tutorial.html'>Tutorial</a></h2>
         <table id="index-table">
             <td> <a href="raymarcher.html">  <img class="demoplot" src="results/julia3d1.png"> <br> Animated Fractals</a> </td>
             <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/interactivejulia1.png"> <br>  Interactive 3D Julia Set</a> </td>
