--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
-
+    
 <head>
     <title> COS426 Final Project &mdash; Fractalizer </title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
+
     <script src="libjs/dat.gui.min.js"> </script>
     <div id="index-div">
+        <table>
+            <td><a href="raymarcher.html"> <img src="results/julia3d2.png"></a> </td>
+        </table>
         <h1> COS426 Final Project &mdash; Fractalizer</h1>
         <h2>Rachel Margulies &lt;rachelbm&gt;<br>
             Sonia Skoularikis &lt;sskoular&gt;<br>
             Thomas Greenspan &lt;tgreensp&gt;</h2>
         <h2><a href='tutorial.html'>Tutorial</a></h2>
-        <table id="index-table">
-                <td> <a href="raymarcher.html"> <img class="demoplot" src="results/julia3d2.png"><br>Animated Fractals</a> </td>
-                <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/interactivejulia1.png"><br>  Interactive 3D Julia Set</a> </td>
+        <br>
+        <br>
+        <table>
+                <td> <a href="raymarcher.html"> <img src="results/julia3d2.png"><br>Animated Fractals</a> </td>
+                <td> <a href="raymarcher2.html">  <img src="results/interactivejulia1.png"><br>  Interactive 3D Julia Set</a> </td>
                 <td> <a href="writeup.html">  <img class="demoplot" src="results/raymarching.png"> <br> Writeup </a> </td>
         </table>
     </div>
