--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 
     <script src="libjs/dat.gui.min.js"> </script>
     <div id="index-div">
-        <table>
-            <td><a href="raymarcher.html"> <img src="results/julia3d2.png"></a> </td>
-        </table>
         <h1> COS426 Final Project &mdash; Fractalizer</h1>
         <h2>Rachel Margulies &lt;rachelbm&gt;<br>
             Sonia Skoularikis &lt;sskoular&gt;<br>
             Thomas Greenspan &lt;tgreensp&gt;</h2>
-        <h2><a href='tutorial.html'>Tutorial</a></h2>
+        <h2><a href='tutorial.html'>Tutorial</a> | <a href="writeup.html">Writeup</a></h2>
         <br>
         <br>
-        <table>
-                <td> <a href="raymarcher.html"> <img src="results/julia3d2.png"><br>Animated Fractals</a> </td>
-                <td> <a href="raymarcher2.html">  <img src="results/interactivejulia1.png"><br>  Interactive 3D Julia Set</a> </td>
-                <td> <a href="writeup.html">  <img class="demoplot" src="results/raymarching.png"> <br> Writeup </a> </td>
+        <table id="index-table" style="width:100%;">
+            <tr style="width:100%;">
+                <td><a href="raymarcher.html">Animated Fractals<br><br><img src="results/julia3d2.png"></a> </td>
+                <td></td>
+                <td><a href="raymarcher2.html">Interactive 3D Julia Set<br><br><img src="results/interactivejulia1.png"></a> </td>
+            </tr>
         </table>
     </div>
 </body>
