--- a/writeup.html
+++ b/writeup.html
@@ -1,5 +1,5 @@
 <head>
-    <title> COS426 Final Project &mdash; Fractals &mdash; Writeup</title>
+    <title> COS426 Final Project &mdash; Fractalizer &mdash; Writeup</title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
@@ -9,19 +9,20 @@
     <div class="top">
     <div class="main_div">
 
-        <h1> <div class=assignment>COS426 Final Project</div>Fractals &mdash; Writeup</h1>
-        <h1>Switch to: <a href='index.html'>Interactive Editor</a></h1>
+        <h1> <div class=assignment>COS426 Final Project</div>Fractalizer &mdash; Writeup</h1>
+        <h1>Switch to: <a href='index.html'>Home Page</a></h1>
         <div class='selectable'>
         <h1 id='student'></h1>
-        
+        <br>
+        <br>
         Table of Contents:
 <ul>
-<li><a href='#Introduction'>Introduction</a></li><ul>
+<li><h1><a href='#Introduction'>Introduction</a></h1></li><ul>
 <li><a href='#Goal'>Goal</a></li>
 <li><a href='#PreviousWork'>Previous Work</a></li>
 <li><a href='#Approach'>Approach</a></li>
 </ul>
-<li><a href='#Methodology'>Methodology</a></li>
+<li><h1><a href='#Methodology'>Methodology</a></h1></li>
 <ul>
 <li><a href='#ImplementationDecisions'>Implementation Decisions</a></li>
 <li><a href='#Challenges'>Challenges</a></li>
