--- a/writeup.html
+++ b/writeup.html
@@ -8,29 +8,36 @@
     <script src="js/writeup.js"> </script>
     <div class="top">
     <div class="main_div">
-
-        <h1> <div class=assignment>COS426 Final Project</div>Fractalizer &mdash; Writeup</h1>
+        <table  style="width:100%;">
+        <td>
+        <h1>COS426 Final Project <br><br>Fractalizer &mdash; Writeup</h1>
         <h1>Switch to: <a href='index.html'>Home Page</a></h1>
-        <div class='selectable'>
+        <br>
+        <br>
         <h1 id='student'></h1>
         <br>
         <br>
-        Table of Contents:
-<ul>
-<li><h1><a href='#Introduction'>Introduction</a></h1></li><ul>
-<li><a href='#Goal'>Goal</a></li>
-<li><a href='#PreviousWork'>Previous Work</a></li>
-<li><a href='#Approach'>Approach</a></li>
-</ul>
-<li><h1><a href='#Methodology'>Methodology</a></h1></li>
-<ul>
-<li><a href='#ImplementationDecisions'>Implementation Decisions</a></li>
-<li><a href='#Challenges'>Challenges</a></li>
-</ul>
-<li><a href='#Results'>Results</a></li>
-<li><a href='#Discussion'>Discussion</a></li>
-<li><a href='#Conclusion'>Conclusion</a></li>
-</ul></div>
+        </td>
+        <td>
+        <h1>Table of Contents:</h1>
+        <ul>
+        <li><h1><a href='#Introduction'>Introduction</a></h1></li><ul>
+        <li><h2><a href='#Goal'>Goal</a></h2></li>
+        <li><h2><a href='#PreviousWork'>Previous Work</a></h2></li>
+        <li><h2><a href='#Approach'>Approach</a></h2></li>
+        </ul>
+        <li><h1><a href='#Methodology'>Methodology</a></h1></li>
+        <ul>
+        <li><h2><a href='#ImplementationDecisions'>Implementation Decisions</a></h2></li>
+        <li><h2><a href='#Challenges'>Challenges</a></h2></li>
+        </ul>
+        <li><h1><a href='#Results'>Results</a></h1></li>
+        <li><h1><a href='#Discussion'>Discussion</a></h1></li>
+        <li><h1><a href='#Conclusion'>Conclusion</a></h1></li>
+        </ul>
+        </td>
+    </table>
+</div>
 
 <p><hr><p><a name='Introduction'></a><h1>Introduction</h1><p><hr><p>
 
