--- a/writeup.html
+++ b/writeup.html
@@ -10,31 +10,32 @@
     <div class="main_div">
         <table  style="width:100%;">
         <td>
-        <h1>COS426 Final Project <br><br>Fractalizer &mdash; Writeup</h1>
-        <h1>Switch to: <a href='index.html'>Home Page</a></h1>
-        <br>
-        <br>
-        <h1 id='student'></h1>
-        <br>
-        <br>
+            <h1>COS426 Final Project <br><br>Fractalizer &mdash; Writeup</h1>
+            <h1>Switch to: <a href='index.html'>Home Page</a></h1>
+            <br>
+            <br>
+            <h1 id='student'></h1>
+            <br>
+            <br>
         </td>
         <td>
-        <h1>Table of Contents:</h1>
-        <ul>
-        <li><h1><a href='#Introduction'>Introduction</a></h1></li><ul>
-        <li><h2><a href='#Goal'>Goal</a></h2></li>
-        <li><h2><a href='#PreviousWork'>Previous Work</a></h2></li>
-        <li><h2><a href='#Approach'>Approach</a></h2></li>
-        </ul>
-        <li><h1><a href='#Methodology'>Methodology</a></h1></li>
-        <ul>
-        <li><h2><a href='#ImplementationDecisions'>Implementation Decisions</a></h2></li>
-        <li><h2><a href='#Challenges'>Challenges</a></h2></li>
-        </ul>
-        <li><h1><a href='#Results'>Results</a></h1></li>
-        <li><h1><a href='#Discussion'>Discussion</a></h1></li>
-        <li><h1><a href='#Conclusion'>Conclusion</a></h1></li>
-        </ul>
+            <h1>Table of Contents:</h1>
+            <ul>
+                <li><h1><a href='#Introduction'>Introduction</a></h1></li>
+                <ul>
+                    <li><h2><a href='#Goal'>Goal</a></h2></li>
+                    <li><h2><a href='#PreviousWork'>Previous Work</a></h2></li>
+                    <li><h2><a href='#Approach'>Approach</a></h2></li>
+                </ul>
+                <li><h1><a href='#Methodology'>Methodology</a></h1></li>
+                <ul>
+                    <li><h2><a href='#ImplementationDecisions'>Implementation Decisions</a></h2></li>
+                    <li><h2><a href='#Challenges'>Challenges</a></h2></li>
+                </ul>
+                <li><h1><a href='#Results'>Results</a></h1></li>
+                <li><h1><a href='#Discussion'>Discussion</a></h1></li>
+                <li><h1><a href='#Conclusion'>Conclusion</a></h1></li>
+            </ul>
         </td>
     </table>
 </div>
