--- a/tutorial.html
+++ b/tutorial.html
@@ -12,16 +12,19 @@
     <h1> COS426 Final Project &mdash; Tutorial</h1>
     <h2><a href='index.html'>Home</a></h2>
     
-    <ul>
+    <ul style="text-align:left;">
     <li>Spacebar - Pause/play the animation and music.</li>
     <li>I - Download a screenshot of the current frame.</li>
-    <li>Carats - (Diminishing) Zoom along the z axis.</li>
-    <li>Spacebar - Pause/play the animation and music.</li>
-    <li>Spacebar - Pause/play the animation and music.</li>
-    <li>Spacebar - Pause/play the animation and music.</li>
+    
+    <li>Left/Right Arrow keys - Zoom (fixed step) in X direction.</li>
+    <li>Up/Down Arrow keys - Zoom (fixed step) in Y direction.</li>
+    <li>Left/Right Carats - Zoom (diminishing) in Z direction.</li>
+
+    <li>D/F - Adjust the real coordinate (value 1) of the Julia set.</li>
+    <li>J/K - Adjust the imaginary coordinate (value 2) of the Julia set. Note that this will adjust the 4th dimension for the 3D Julia.</li>
+    <li>Enter - Swap to the next set of default values for the Julia set.</li>
+
     </ul>
-
-
     </div>
 </body>
 </html>
