--- a/writeup.html
+++ b/writeup.html
@@ -84,7 +84,7 @@ Though this version does include the external rings, the animation runs far slow
 <p>
 </li>
 <li><h3>Zoom - Standard vs. Diminishing</h3>
-We chose to implement zooming in the z-direction so that the zoom steps are proportional to the amount the user has already zoomed in. The alternative - translating by a constant amount along the z-axis - is jarring for the user, because it jumps the view through the objects in the scene (typically centered at the origin) rather than approaching them gradually.
+We chose to implement zooming in the z-direction so that the zoom steps are proportional to the amount the user has already zoomed in. The alternative - translating by a constant amount along the Z axis - is jarring for the user, because it jumps the view through the objects in the scene (typically centered at the origin) rather than approaching them gradually.
 </li>
 </ul>
 <a name='Challenges'></a><h2>Challenges</h2>
