links in writeup

--- a/tutorial.html
+++ b/tutorial.html
@@ -12,8 +12,9 @@
     <h1> COS426 Final Project &mdash; Tutorial</h1>
     <h2><a href='index.html'>Home</a></h2>
     
+    <div>
     <ul style="text-align:left;">
-    <li>Spacebar - Pause/play the animation and music.</li>
+    <li>P - Pause/play the animation and music.</li>
     <li>I - Download a screenshot of the current frame.</li>
     
     <li>Left/Right Arrow keys - Zoom (fixed step) in X direction.</li>
@@ -25,6 +26,7 @@
     <li>Enter - Swap to the next set of default values for the Julia set.</li>
 
     </ul>
+    </div>
     </div>
 </body>
 </html>
