--- a/batch.html
+++ b/batch.html
@@ -15,7 +15,7 @@
     <script src="libjs/glMatrix-0.9.5.min.js"> </script>
     
     <script src="js/gui.js"></script>
-    <script src="js/raytracer.js"> </script>
+    <script src="js/raymarcher.js"> </script>
     <script src="js/scene.js"> </script>
     <script src="js/student.js"> </script>
     <script src="js/parser.js"> </script>
