--- a/writeup.html
+++ b/writeup.html
@@ -117,27 +117,27 @@ We measured success qualitatively based on the resolution of our rendering, the 
 Below, we go through each of the animated scenes briefly. Each header links to the batch url for the given scene. Check out our <a href='tutorial.html'>brief tutorial</a> to learn how to navigate and interact with the visualizations.
 
 <ul>
-<li><h3><a href='batch.html?scene=spheres&animated=1&song=Wonder%20(feat.%20The%20Kite%20String%20Tangle).mp3'>Infinite Spheres</a></h3></li>
+<li><h3><a href='raymarcher.html?scene=spheres&animated=1&song=11'>Infinite Spheres</a></h3></li>
 <p>
 <img src='results/spheres.png'>
 <p>
 Color and height (by manhattan distance to center sphere) dependent on audio.
-<li><h3><a href='batch.html?scene=menger&animated=1&level=4&song=Float%20(TheFatRat%20Remix).mp3'>Menger Sponge</a></h3></li>
+<li><h3><a href='batch.html?scene=menger&animated=1&level=4&song=4'>Menger Sponge</a></h3></li>
 <p>
 <img src='results/menger.png'>
 <p>
 Color (by distance to origin) dependent on audio.
-<li><h3><a href='batch.html?scene=mandelbrot&animated=1&song=Rather%20Be%20(Elephante%20Remix).mp3'>Mandelbrot</a></h3></li>
+<li><h3><a href='batch.html?scene=mandelbrot&animated=1&song=1'>Mandelbrot</a></h3></li>
 <p>
 <img src='results/mandelbrotstandard.png'>
 <p>
 Color (by ratio of iterations) dependent on audio.
-<li><h3><a href='batch.html?scene=julia2d&animated=1&value1=-0.4&value2=0.6&song=Forever%20(Pt.%20II)%20Feat.%20Kaleem%20Taylor.mp3'>Julia 2D</a></h3></li>
+<li><h3><a href='batch.html?scene=julia2d&animated=1&value1=-0.4&value2=0.6&song=0'>Julia 2D</a></h3></li>
 <p>
 <img src='results/julia2d3.png'>
 <p>
 Color (by ratio of iterations) and values for the second complex number (single audio indices for real and imaginary coordinates) dependent on audio.
-<li><h3><a href='batch.html?scene=julia3d&animated=1&value2=0.6&song=Borderline.mp3'>Julia 3D</a></h3></li>
+<li><h3><a href='batch.html?scene=julia3d&animated=1&value2=0.6&song=3'>Julia 3D</a></h3></li>
 <p>
 <img src='results/julia3d2.png'>
 <p>
@@ -147,7 +147,7 @@ Color (by ratio of iterations) and values for the imaginary part of the second c
 <img src='results/interactivejulia2.png'>
 <p>
 No audio.
-<li><h3><a href='batch.html?scene=apollonian&animated=1&level=12&song=Kanye%20(Ookay%20Remix).mp3'>Apollonian Gasket</a></h3></li>
+<li><h3><a href='batch.html?scene=apollonian&animated=1&level=12&song=6'>Apollonian Gasket</a></h3></li>
 <p>
 <img src='results/apollonian2.png'>
 <p>
