omg i spelled caret wrong in the tutorial

--- a/tutorial.html
+++ b/tutorial.html
@@ -19,7 +19,7 @@
     
     <li>Left/Right Arrow keys - Zoom (fixed step) in X direction.</li>
     <li>Up/Down Arrow keys - Zoom (fixed step) in Y direction.</li>
-    <li>Left/Right Carats - Zoom (diminishing) in Z direction.</li>
+    <li>Left/Right Carets - Zoom (diminishing) in Z direction.</li>
 
     <li>D/F - Adjust the real coordinate (value 1) of the Julia set.</li>
     <li>J/K - Adjust the imaginary coordinate (value 2) of the Julia set. Note that this will adjust the 4th dimension for the 3D Julia.</li>
