updating writeup... whoops sorry

--- a/writeup.html
+++ b/writeup.html
@@ -43,7 +43,7 @@
 <p><hr><p><a name='Introduction'></a><h1>Introduction</h1><p><hr><p>
 
 <a name='Goal'></a><h2>Goal</h2>
-Inspired by the <a href='https://www.youtube.com/watch?v=l-lTqSNmcys'>Mandelbulb 3D</a> shown in precept, our goal was to create a fractal-based sound visualizer. We envisioned an interactive, explorable 3D environment in which our extra dimension, music, controlled parameters of the animation. This visualizer could be used for educational purposes to help students conceptualize fractals in higher dimensions or for entertainment in the music industry. Our project to a wide range of audiences since it is both visually appealing and mathematically based. In general, fractals can be used to generate realistic terrains for movies and video games.
+Inspired by the <a href='https://www.youtube.com/watch?v=l-lTqSNmcys'>Mandelbulb 3D</a> shown in precept, our goal was to create a fractal-based sound visualizer. We envisioned an interactive, explorable 3D environment in which our extra dimension, music, controlled parameters of the animation. This visualizer could be used for educational purposes to help students conceptualize fractals in higher dimensions or for entertainment in the music industry. Our project might be interesting to a wide range of audiences since it is both visually appealing and mathematically based. In general, fractals can be used to generate realistic terrains for movies and video games.
 
 <a name='PreviousWork'></a><h2>Previous Work</h2>
 
@@ -117,7 +117,7 @@ We measured success qualitatively based on the resolution of our rendering, the 
 Below, we go through each of the animated scenes briefly. Each header links to the batch url for the given scene. Check out our <a href='tutorial.html'>brief tutorial</a> to learn how to navigate and interact with the visualizations.
 
 <ul>
-<li><h3><a href='raymarcher.html?scene=spheres&animated=1&song=11'>Infinite Spheres</a></h3></li>
+<li><h3><a href='batch.html?scene=spheres&animated=1&song=11'>Infinite Spheres</a></h3></li>
 <p>
 <img src='results/spheres.png'>
 <p>
@@ -141,8 +141,8 @@ Color (by ratio of iterations) and values for the second complex number (single 
 <p>
 <img src='results/julia3d2.png'>
 <p>
-<li><h3><a href='raymarcher2.html'>Interactive Julia 3D</a></h3></li>
 Color (by ratio of iterations) and values for the imaginary part of the second complex number (single audio index) dependent on audio.
+<li><h3><a href='raymarcher2.html'>Interactive Julia 3D</a></h3></li>
 <p>
 <img src='results/interactivejulia2.png'>
 <p>
