making it look better for bigger

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <br>
         <table id="index-table" style="width:100%;">
             <tr style="width:100%;">
-                <td><a href="raymarcher.html">Animated Fractals<br><br><img src="results/julia3d2.png"></a> </td>
+                <td><a href="raymarcher.html">Animated Fractals<br><br><img class="demoplot" src="results/julia3d2.png"></a> </td>
                 <td></td>
-                <td><a href="raymarcher2.html">Interactive 3D Julia Set<br><br><img src="results/interactivejulia1.png"></a> </td>
+                <td><a href="raymarcher2.html">Interactive 3D Julia Set<br><br><img class="demoplot" src="results/interactivejulia1.png"></a> </td>
             </tr>
         </table>
     </div>
